fix #318 - button overflowed sidebar

--- a/source/_css/components/_pagination.scss
+++ b/source/_css/components/_pagination.scss
@@ -4,6 +4,7 @@
     height: $pagination-height;
 
     .pagination {
+        position:    relative;
         height:      $pagination-height;
         line-height: $pagination-height;
         display:     block;
